--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                 <i class="fa fa-github fa-fw"></i> <span class="network-name">GitHub</span></a>
                         </li>
                         <li>
-                            <a href="doc.pdf" class="btn btn-default btn-lg">
+                            <a href="doc/" class="btn btn-default btn-lg">
                                 <i class="fa fa-book fa-fw"></i> <span class="network-name">Vignette</span></a>
                         </li>
                     </ul>
