--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="enpls - Ensemble Partial Least Squares Regression">
     <meta name="author" content="Nan Xiao">
+    <meta name="google-site-verification" content="7FW8tFciCo03Fuos9otZBpVRbms3eZid4SL1ijn8NXg" />
 
     <title>enpls - Ensemble Partial Least Squares Regression</title>
 
