--- a/index.html
+++ b/index.html
@@ -252,26 +252,29 @@
             <hr />
 
             <section id="fs-section" class="container section">
+
                 <div id="workCopy">
+
                     <div class="section-title text-left padding-bottom-50">
                         <div>
                             <h2 class="section-title-heading"><span>Measuring Feature Importance</span></h2>
                         </div>
                     </div>
+
                     <div class="row">
-                        <div class="col-sm-6">
+                        <div class="col-sm-12">
                             <p class="workDesc">
-                                <br><br><br><br> The feature importance ranking established in enpls are based on the average estimated effect size of variables and the variance of coefficients. The ranking serves as an informative measurement for the
-                                contribution of each variable in the (sparse) PLS model.
+                                The feature importance ranking established in enpls are based on the average estimated effect size of variables and the variance of coefficients. The ranking serves as an informative measurement for the contribution of each variable in the (sparse) PLS
+                                model.
                             </p>
                             <p class="workDesc">
                                 In enpls, the function <code>enpls.fs()</code> computes the feature importance ranking based on ensemble PLS regressions while <code>enspls.fs()</code> gives a similar ranking based on ensemble sparse PLS regressions.
+                                <br><br><br>
                             </p>
                         </div>
+                    </div>
 
-                        <div class="col-sm-0">
-                        </div>
-
+                    <div class="row">
                         <div class="col-sm-6">
                             <ul class="portfolio-container no-margin-bottom list-unstyled row portfolio-hover-effect">
                                 <li class="portfolio-item photo video col-sm-12 col-md-12 col-xs-12">
@@ -279,7 +282,7 @@
                                         <img src="img/enpls.fs.png" alt="nomogram" />
                                     </div>
                                     <div class="portfolio-item-info font-second">
-                                        <h3 class="portfolio-item-title">Feature Importance Boxplot</h3>
+                                        <h3 class="portfolio-item-title">Feature Importance Scores</h3>
                                         <div class="portfolio-item-detail">
                                             <p>Click the icon to zoom in</p>
                                             <!-- LightBox Button -->
@@ -291,6 +294,29 @@
                             </ul>
                         </div>
 
+                        <div class="col-sm-6">
+                            <ul class="portfolio-container no-margin-bottom list-unstyled row portfolio-hover-effect">
+                                <li class="portfolio-item photo video col-sm-12 col-md-12 col-xs-12">
+                                    <div class="portfolio-item-img">
+                                        <img src="img/enpls.fs.boxplot.png" alt="nomogram" />
+                                    </div>
+                                    <div class="portfolio-item-info font-second">
+                                        <h3 class="portfolio-item-title">Coefficients Boxplot</h3>
+                                        <div class="portfolio-item-detail">
+                                            <p>Click the icon to zoom in</p>
+                                            <!-- LightBox Button -->
+                                            <a href="img/enpls.fs.boxplot.png" class="icon-magnifying-glass lightbox" data-lightbox-gallery="gallery1"></a>
+                                            <!--/ End LightBox Button -->
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+
+                    </div>
+
+                    <div>
+                        <p><br><br><br></p>
                     </div>
 
                     <div>
