update report link

--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
                         <h2 class="hs-text-6">Ensemble Partial Least Squares Regressions</h2>
                     </div>
                     <div class="margin-bottom-30 init-animation-2 delay0-2s">
-                        <h1 class="hs-text-10 uppercase padding-top-40 font-third"><p style="text-transform:lowercase">&nbsp;enpls&nbsp;<p></h1>
+                        <h1 class="hs-text-10 uppercase padding-top-40 font-third">
+                            <p style="text-transform:lowercase">&nbsp;enpls&nbsp;
+                                <p>
+                        </h1>
                     </div>
                     <div class="inline-block margin-top-10 padding-top-10 padding-left-sm-10 ">
                         <a href="https://cran.r-project.org/package=enpls" class="btn btn-animated btn-split btn-transparent-white ripple-alone" data-text="View on CRAN"><span>Stable Version</span></a>
@@ -145,7 +148,9 @@
                             Click icons to see details
                         </div>
                         <div>
-                            <h1 class="section-title-heading"><span>Workflow Supported</span> <p style="text-transform:lowercase">in enpls</p></h1>
+                            <h1 class="section-title-heading"><span>Workflow Supported</span>
+                                <p style="text-transform:lowercase">in enpls</p>
+                            </h1>
                         </div>
                     </div>
                     <div class="position-relative padding-bottom-40 padding-top-100 padding-top-sm-120">
@@ -325,7 +330,9 @@
 
                     <div class="row">
                         <div class="work-category-title col-md-12">
-                            <h4><p style="text-transform:lowercase">enpls.fs()</p></h4>
+                            <h4>
+                                <p style="text-transform:lowercase">enpls.fs()</p>
+                            </h4>
                         </div>
                         <div class="col-md-2 col-sm-6">
                             <div class="category-item"> maxcomp</div>
@@ -357,7 +364,9 @@
 
                     <div class="row">
                         <div class="work-category-title col-md-12">
-                            <h4><p style="text-transform:lowercase">enspls.fs()</p></h4>
+                            <h4>
+                                <p style="text-transform:lowercase">enspls.fs()</p>
+                            </h4>
                         </div>
                         <div class="col-md-2 col-sm-6">
                             <div class="category-item"> maxcomp</div>
@@ -443,7 +452,9 @@
 
                     <div class="row">
                         <div class="work-category-title col-md-12">
-                            <h4><p style="text-transform:lowercase">enpls.od()</p></h4>
+                            <h4>
+                                <p style="text-transform:lowercase">enpls.od()</p>
+                            </h4>
                         </div>
                         <div class="col-md-2 col-sm-6">
                             <div class="category-item"> maxcomp</div>
@@ -475,7 +486,9 @@
 
                     <div class="row">
                         <div class="work-category-title col-md-12">
-                            <h4><p style="text-transform:lowercase">enspls.od()</p></h4>
+                            <h4>
+                                <p style="text-transform:lowercase">enspls.od()</p>
+                            </h4>
                         </div>
                         <div class="col-md-2 col-sm-6">
                             <div class="category-item"> maxcomp</div>
@@ -561,7 +574,9 @@
 
                     <div class="row">
                         <div class="work-category-title col-md-12">
-                            <h4><p style="text-transform:lowercase">enpls.fit() / enspls.fit()</p></h4>
+                            <h4>
+                                <p style="text-transform:lowercase">enpls.fit() / enspls.fit()</p>
+                            </h4>
                         </div>
                         <div class="col-md-2 col-sm-6">
                             <div class="category-item"> maxcomp</div>
@@ -599,7 +614,9 @@
 
                     <div class="row">
                         <div class="work-category-title col-md-12">
-                            <h4><p style="text-transform:lowercase">cv.enpls() / cv.enspls()</p></h4>
+                            <h4>
+                                <p style="text-transform:lowercase">cv.enpls() / cv.enspls()</p>
+                            </h4>
                         </div>
                         <div class="col-md-2 col-sm-6">
                             <div class="category-item"> nfolds</div>
@@ -632,8 +649,7 @@
                             <blockquote class=" about-quote wow fadeInUp" data-wow-delay="0s">
                                 <p>The idea of ensemble learning is not only effective in improving the predictive performance of certain statistical and machine learning models, but also useful for model diagnostic purposes. In the light of this, we built
                                     the enpls package, which offers a framework for measuring feature importance, outlier detection, and ensemble modeling with (sparse) partial least squares regressions.</p>
-                                <p>If you have any questions, suggestions, or ideas about the package, please feel free to <a href="http://nanx.me">let me know</a> via email or <a href="https://github.com/road2stat/enpls/pulls">send pull requests</a> on
-                                    GitHub.
+                                <p>If you have any questions, suggestions, or ideas about the package, please feel free to <a href="http://nanx.me">let me know</a> via email or <a href="https://github.com/road2stat/enpls/issues">create an issue</a> on GitHub.
                                 </p>
                             </blockquote>
                         </div>
