--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<!-- Main Styles -->
 	<link href="css/styles.css" rel="stylesheet">
 	<!-- Theme -->
-	<link href="css/theme/orange.css" rel="stylesheet" data-color="" id="theme">
+	<link href="css/theme/dark-blue.css" rel="stylesheet" data-color="" id="theme">
 	<!-- Animsition -->
 	<link href="css/animsition.min.css" rel="stylesheet">
 	<meta name="application-name" content="&nbsp;" />
