update about section

--- a/index.html
+++ b/index.html
@@ -810,8 +810,8 @@
 							<blockquote class=" about-quote wow fadeInUp" data-wow-delay="0s">
 								<p>The idea of ensemble learning is not only effective in improving the predictive performance of certain statistical
 									and machine learning models, but also useful for model diagnostic purposes. In the light of this, we built the enpls
-									package, which offers a framework for measuring feature importance, outlier detection, and ensemble modeling with
-									(sparse) partial least squares regressions.</p>
+									package, which offers a framework for measuring feature importance, outlier detection, applicability domain evaluation,
+									and ensemble predictive modeling with (sparse) partial least squares regressions.</p>
 								<p>If you have any questions, suggestions, or ideas about the package, please feel free to <a href="http://nanx.me">let me know</a>									via email or <a href="https://github.com/road2stat/enpls/issues">create an issue</a> on GitHub.
 								</p>
 							</blockquote>
