--- a/LICENSE.html
+++ b/LICENSE.html
@@ -784,7 +784,7 @@ Public License instead of this License.  But first, please read
 
       <footer>
       <div class="copyright">
-  <p>Developed by Nan Xiao, Dongsheng Cao, Miaozhu Li, Qingsong Xu.</p>
+  <p>Developed by Nan Xiao, Dong-Sheng Cao, Miao-Zhu Li, Qing-Song Xu.</p>
 </div>
 
 <div class="pkgdown">
