--- a/authors.html
+++ b/authors.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Citation and Authors • enpls</title>
+<title>Authors • enpls</title>
 
 <!-- jquery -->
 <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha384-nrOSfDHtoPMzJHjVTdCopGqIqeYETSXhZDFyniQ8ZHcVy08QesyHcnOUpMpqnmWq" crossorigin="anonymous"></script>
@@ -49,7 +49,7 @@
   </head>
 
   <body>
-    <div class="container template-citation-authors">
+    <div class="container template-authors">
       <header>
       <div class="navbar navbar-default navbar-fixed-top" role="navigation">
   <div class="container">
@@ -96,22 +96,7 @@
       </header>
 
       <div class="row">
-  <div class="contents col-md-9">
-
-    <div class="page-header">
-      <h1>Citation</h1>
-    </div>
-
-    <p>Xiao N, Cao D, Li M and Xu Q (2016).
-&ldquo;enpls: an R Package for Ensemble Partial Least Squares Regression.&rdquo;
-<em>arXiv preprint</em>. 
-</p>
-    <pre>@Article{,
-  title = {enpls: an R Package for Ensemble Partial Least Squares Regression},
-  journal = {arXiv preprint},
-  year = {2016},
-  author = {Nan Xiao and Dong-Sheng Cao and Miao-Zhu Li and Qing-Song Xu},
-}</pre>
+  <div class="contents col-md-12">
     <div class="page-header">
       <h1>Authors</h1>
     </div>
@@ -122,15 +107,15 @@
         </p>
       </li>
       <li>
-        <p><strong>Dongsheng Cao</strong>. Author.
+        <p><strong>Dong-Sheng Cao</strong>. Author.
         </p>
       </li>
       <li>
-        <p><strong>Miaozhu Li</strong>. Author.
+        <p><strong>Miao-Zhu Li</strong>. Author.
         </p>
       </li>
       <li>
-        <p><strong>Qingsong Xu</strong>. Author.
+        <p><strong>Qing-Song Xu</strong>. Author.
         </p>
       </li>
     </ul>
@@ -142,7 +127,7 @@
 
       <footer>
       <div class="copyright">
-  <p>Developed by Nan Xiao, Dongsheng Cao, Miaozhu Li, Qingsong Xu.</p>
+  <p>Developed by Nan Xiao, Dong-Sheng Cao, Miao-Zhu Li, Qing-Song Xu.</p>
 </div>
 
 <div class="pkgdown">
