--- a/authors.html
+++ b/authors.html
@@ -104,7 +104,7 @@
     <ul class="list-unstyled">
       <li>
         <p><strong>Nan Xiao</strong>. Author, maintainer.
-        </p>
+        <br /><small>0000-0002-0250-5673</small></p>
       </li>
       <li>
         <p><strong>Dong-Sheng Cao</strong>. Author.
